# zephyr_st-stsafe-a1xx

./: .gitmodules  CMakeLists.txt  Kconfig  LICENSE  README.md  west.yml
.github/workflows/: driver.yaml
drivers/stsafe/: CMakeLists.txt  Kconfig  stsafe.c
drivers/stsafe/platform/: aes.c  cmac.c  crc16.c  crypto.c  i2c.c  key_store.c  stse_aes.h  stse_conf.h  stse_platform_generic.h
dts/bindings/crypto/: st,stsafe-a110.yaml  st,stsafe-a120.yaml  st,stsafe-common.yaml
include/: aes.h  stse_aes.h  stse_conf.h  stse_platform_generic.h
include/drivers/: stsafe.h
include/helpers/: crc16.c  crypto.c  i2c.c  services.c
samples/zephyr_st-stsafe-a1xx-example/: CMakeLists.txt  README.md  app.overlay  prj.conf  sample.yaml  sixtron_bus.overlay  west.yml
samples/zephyr_st-stsafe-a1xx-example/.devcontainer/: Dockerfile  devcontainer.json
samples/zephyr_st-stsafe-a1xx-example/.github/workflows/: build.yaml
samples/zephyr_st-stsafe-a1xx-example/app/: CMakeLists.txt
samples/zephyr_st-stsafe-a1xx-example/app/src/: main.c
samples/zephyr_st-stsafe-a1xx-example/boards/: zest_core_nrf5340_nrf5340_cpuapp_ns.overlay
samples/zephyr_st-stsafe-a1xx-example/include/: stse_conf.h
samples/zephyr_st-stsafe-a1xx-example/src/: main.c
samples/zephyr_st-stsafe-a1xx-tester/: CMakeLists.txt  LICENSE  README.md  app.overlay  prj.conf  sample.yaml  sixtron_bus.overlay
samples/zephyr_st-stsafe-a1xx-tester/app/: CMakeLists.txt  prj.conf
samples/zephyr_st-stsafe-a1xx-tester/src/: main.c
src/: aes.c  cmac.c  crc16.c  crypto.c  i2c.c  key_store.c  services.c
src/port/: cmac.c
(+8 files in other folders)
